# cronosII-scratch

./: AUTHORS  CVS-IMPORTANT-READ-FIRST  ChangeLog  FEATURES  HELP-NOTES  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.1st  README.cvs  Spool-analisys.abw  THANKS  TODO  TODO.CVS  about.html.in  acconfig.h  acinclude.m4  aclocal.m4  bugs.html.in  c2addrbook-gmc.desktop  c2addrbook.desktop  config.h.in  configure  configure.in  cronosII-config.in  cronosII-gmc.desktop  cronosII.desktop  cronosII.desktop.in  cronosII.spec.in  features.html.in  message_404.html.in  mkpotfiles-in  touch.html.in  welcome.html.in
default/: Makefile.am  Makefile.in  cronosII.gnome.in  default.elm.in  default.index.in
diagrams/: Message-Deliver.dia  c2imap.dia  pop3->db.dia
doc/: Makefile.in
doc/C/: Makefile.am  Makefile.in  accounts.sgml  addressbook.sgml  authors.sgml  bugs.sgml  composer.sgml  cronosII.sgml  email.sgml  general-accounts.sgml  general-options.sgml  general-plugins.sgml  gtk-brief.sgml  interface.sgml  latest.sgml  mainwindow.sgml  plugins-extension.sgml  plugins.sgml  preferences.sgml  shortcuts_table.sgml  switches.sgml
doc/C/cronosII/: authors.html  bugs.html  composer.html  configuration.html  gtk-tips.html  index.html  install.html  keyboard-shortcuts.html  license.html  mainwindow-icons.html  manual-authors.html  text-menubar.html  using-cronosii.html
images/: ChangeLog  Makefile.am  Makefile.in  README-emoticons  cronosII.xpm
libcronosII/: Makefile.am  Makefile.in  README.api  README.faq  README.mailbox_id  README.request  account.c  account.h  date-utils.c  date-utils.h  db-cronosII.c  db-cronosII.h  db-imap.c  db-imap.h  db-spool.c  db-spool.h  db.c  db.h  error.c  error.h  hash-definitions.h  hash.c  hash.h  i18n.h  imap.c  imap.h  mailbox.c  mailbox.h  md5.c  md5.h  message.c  message.h  mime.c  mime.h  net-object.c  net-object.h  pop3.c  pop3.h  request.c  request.h  (+21 more)
libmodules/: Makefile.am  Makefile.in  README  db.c  db.h  error.c  error.h  i18n.h  mailbox.c  mailbox.h  pop.h  utils.c  utils.h
macros/: Makefile.in
man/: Makefile.am  Makefile.in  cronos.1  cronosII.1
module-test/: Makefile.am  Makefile.in  date.c  db.c  mailbox.c
module-test/.deps/: db.P  mailbox.P
pixmaps/: Makefile.am  Makefile.in
plugins/: Makefile.am  Makefile.in  plugin.html
plugins/sample/: Makefile  sample.c
po/: POTFILES.in  br.po  cat-id-tbl.c  cronosII-scratch.pot  cronosII.pot  de.po  es.po  es_AR.po  fr.po  it.po
rfc/: rfc0821.txt  rfc0937.txt  rfc1321.txt  rfc1734.txt  rfc1939.txt  rfc1957.txt  rfc2060.txt  rfc2195.txt  rfc2449.txt  rfc2683.txt  rfc2959.txt
src/: Makefile.am  Makefile.in  README  README.FAQ  c2-app.c  c2-app.h  c2-main-window.c  c2-main-window.h  dialogs.h  install-wizard.c  install.c  main-window.c  main-window.h  main.c  main.h  mw.c  object-ui-data.c  object-ui-data.h  preferences-trans.h  preferences.c  preferences.h  trans.h  ui-text-editor.c  utils-application.c  widget-HTML-gtkhtml.c  widget-HTML-gtkhtml.h  widget-HTML-gtkxmhtml.c  widget-HTML-gtkxmhtml.h  widget-HTML.c  widget-HTML.h  widget-IMAP-list.h  widget-application-utils.c  widget-application-utils.h  widget-application.c  widget-application.h  widget-composer.c  widget-composer.h  widget-dialog-network-traffic.c  widget-dialog-network-traffic.h  widget-dialog-preferences.c  (+35 more)
src/xpm/: drafts.xpm  folder.xpm  forward.xpm  mark.xpm  mini_about.xpm  mini_error.xpm  new.xpm  queue_mbox.xpm  read.xpm  reply.xpm  unread.xpm
test-suite/: Makefile  Makefile.am  Makefile.in  account.c  date.c  db.c  differ.c  hash.c  imap.c  mailbox.c  message.c  pop3.c  pop3_test.c  request.c  smtp.c  utils.c
test-suite/.deps/: db.P  mailbox.P
tools/: Makefile.am  Makefile.in  index_is_clean.c
xml/: Makefile.am  Makefile.in  composer.glade  copy-message16.xpm  copy.xpm  copy16.xpm  cronosII-composer.glade  cronosII.glade  cut16.xpm  delete16.xpm  dialogs.glade  filter.xpm  forward-big.xpm  graph.xpm  install.glade  mail-forward16.xpm  mail-reply-all16.xpm  mail-reply16.xpm  mail-write.xpm  mail.glade  mail.xpm  mail16.xpm  mark.xpm  mcard.xpm  move-message16.xpm  move.xpm  next.xpm  next16.xpm  paste16.xpm  preferences.glade  prev.xpm  prev16.xpm  print.xpm  print16.xpm  read.xpm  receive16.xpm  reply-all-big.xpm  reply-big.xpm  save.xpm  save16.xpm  (+5 more)
