dnl #######################################################
dnl   Version Information
dnl #######################################################

C2_PLUGIN_VERSION_MAJOR=0
C2_PLUGIN_VERSION_MINOR=3
C2_PLUGIN_VERSION_MICRO=0

dnl ## STABLE is 1 when the release is stable or 0 when its not ##
STABLE=0

dnl #######################################################
dnl   Welcome
dnl #######################################################
define([AC_INIT_BINSH],
[[#! /bin/bash
echo
echo Welcome to Cronos II configure script.
echo Check http://www.cronosII.org/ for the latest
echo version of this software.
echo
echo
echo This version of Cronos II is still alpha, and we need you to read the
echo release notes before building the software\. Until you do this we can\'t
echo let you do it\.
echo
echo Read the file README.1st please.
echo
#exit # Remove this line to build
echo
echo ============================= Configuring =============================
]])

dnl #######################################################
dnl   Initialization
dnl #######################################################

AC_INIT(src)
AM_CONFIG_HEADER(config.h)


dnl Don't forget to update the FEATURES variable when changing
dnl version.
AM_INIT_AUTOMAKE(cronosII, "0.3.0pre9")
AC_DEFINE_UNQUOTED(URL, "http://www.cronosII.org/")

dnl #######################################################
dnl   Command, paths and libraries checks
dnl #######################################################

AM_MAINTAINER_MODE
AM_ACLOCAL_INCLUDE(macros)
AC_ISC_POSIX

dnl ## Check for GLib ##
AM_PATH_GLIB([1.2.0], [], [
AC_MSG_ERROR([
Cronos II requires GLib to be built.])], gthread)

GNOME_INIT

AC_PROG_CC
AC_STDC_HEADERS
AC_ARG_PROGRAM
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_STRUCT_TM
AC_FUNC_STRFTIME
AC_CHECK_LIB(pthread, pthread_join)
AC_CHECK_FUNCS(gethostname socket strstr setsockopt)

FEATURES=""

dnl ## Get the date ##
BUILDTIME=`date +%s`

GNOME_X_CHECKS

dnl ## Check for Gnome 1.0 or better ##

AC_MSG_CHECKING([for gnome-libs version >= 1.0.0])
vers=`gnome-config --version gnome-libs | sed 's/^gnome-libs //'`
case $vers
	in
		0.*)
			AC_MSG_RESULT([no])
			AC_MSG_ERROR(
[Cronos II requires gnome-libs 1.0 or better.
You might want to download it from
http://www.gnome.org/.
])
			;;
		*) 
			AC_MSG_RESULT([yes])
			;;
esac

dnl ## Check for Gnome-Print ##
AM_PATH_GNOME_PRINT([0.20.0], [
	AC_DEFINE(USE_GNOME_PRINT)
])

dnl ## Check for libglade ##
AM_PATH_LIBGLADE( , , gnome)
LIBGLADE_CFLAGS=`gnome-config --cflags libglade`
LIBGLADE_LIBS=`gnome-config --libs libglade`

dnl #######################################################
dnl   i18n
dnl #######################################################

ALL_LINGUAS="br de es es_AR fr it"
AM_GNU_GETTEXT

dnl #######################################################
dnl   Prefix
dnl #######################################################

if test "$prefix" = "NONE"; then
	AC_PATH_PROG(cronosIIpath, cronosII-config)
	AC_MSG_CHECKING(cronosII-config for a prior installation)
	if test "_$cronosIIpath" = _; then
		AC_MSG_RESULT(no prior installation found)
		AC_MSG_CHECKING(glib-config for a prefix)
		prefix=`glib-config --prefix`
		AC_MSG_RESULT($prefix)
	else
		prefix=`cronosII-config --prefix`
		AC_MSG_RESULT($prefix)
	fi
fi

AC_ARG_ENABLE([], [], [], [])
AC_ARG_ENABLE([], [], [], [])

dnl #######################################################
dnl   Spool dir
dnl #######################################################

AC_MSG_CHECKING(for a valid spool directory in /var/spool/mail)
if test -d "/var/spool/mail"; then
	AC_MSG_RESULT(ok)
	spool=/var/spool/mail
fi

if test "$spool" = "no"; then
	AC_MSG_CHECKING(for a valid spool directory in /var/spool)
	if test -d "/var/spool"; then
		AC_MSG_RESULT(ok)
		spool=/var/spool
	fi
fi

if test "$spool" = "no"; then
	AC_MSG_CHECKING(for a valid spool directory in /var)
	if test -d "/var"; then
		AC_MSG_RESULT(ok)
		spool=/var
	fi
fi

if test "$spool" = "no"; then
	AC_MSG_CHECKING(for a valid spool directory in /)
	if test -d "/"; then
		AC_MSG_RESULT(ok)
		spool=/
	fi
fi

AC_DEFINE_UNQUOTED(USE_SPOOL_DIR, "$spool")

dnl #######################################################
dnl   X-Mailer
dnl #######################################################

AC_ARG_ENABLE([anonymizer],
[  --enable-anonymizer       Don't send system information in messages. [default=no]],
[ anonymizer=$enableval ], [ anonymizer=no ])

if test "$anonymizer" = "no"; then
	gnomeversion=`gnome-config --version gnome-libs | sed 's/^gnome-libs //'`
	os=`uname -s`
	osrelease=`uname -r`
	machinetype=`uname -m`
	xmailer="Cronos II $VERSION (Gnome $gnomeversion; $os $osrelease; $machinetype)"
else
	xmailer="Cronos II"
fi

AC_DEFINE_UNQUOTED(USE_XMAILER, "$xmailer")

dnl #######################################################
dnl   Debug
dnl #######################################################

AC_ARG_ENABLE([debug],
[  --disable-debug           Disable the debugging routines. [default=yes]],
[ debug=$enableval ], [ debug=yes ])

if test "$debug" = "yes"; then
	AC_DEFINE(USE_DEBUG)
	debug=yes
else
	debug=no
fi

dnl #######################################################
dnl   Gnome-Download
dnl #######################################################

AC_PATH_PROG(gnomedownload, gnome-download)
if test "_$gnomedownload" = _; then
	AC_MSG_CHECKING(gnome-download path)
	AC_MSG_ERROR([the gnome-download script couldn't be found.])
fi
AC_DEFINE_UNQUOTED(GNOME_DOWNLOAD_PATH, "$gnomedownload")

dnl #######################################################
dnl   GConf
dnl #######################################################

AC_ARG_ENABLE([gconf],
[  --disable-gconf           Disable the use of GConf [default=auto]],
[ gconf=$enableval ], [ gconf=auto ])

if test "$gconf" = "yes"; then
	AC_PATH_PROG(gconfconfig, gconf-config)
	if test "_$gconfconfig" = _; then
		AC_MSG_CHECKING(gconf-config path)
		AC_MSG_ERROR([the gconf-config script could not be found.])
	else
		GCONFCFLAGS=`gconf-config --cflags`
		GCONFLIBS=`gconf-config --libs`
		AC_DEFINE(USE_GCONF)
		FEATURES="$FEATURES GConf"
	fi
elif test "$gconf" = "auto"; then
	AC_PATH_PROG(gconfconfig, gconf-config)
	if test "_$gconfconfig" = _; then
		gconf=no
	else
		GCONFCFLAGS=`gconf-config --cflags`
		GCONFLIBS=`gconf-config --libs`
		AC_DEFINE(USE_GCONF)
		FEATURES="$FEATURES GConf"
	fi
fi

dnl #######################################################
dnl   GtkHTML
dnl #######################################################

AC_ARG_ENABLE([gtkhtml],
[  --disable-gtkhtml         Disable the use of the GtkHTML widget for showing messages [default=auto]],
[ gtkhtml=$enableval ], [ gtkhtml=yes ])

AC_MSG_CHECKING(for GtkHTML)
if test "$gtkhtml" = "yes"; then
	if gnome-config --libs gtkhtml > /dev/null 2>&1; then
		vers=`gnome-config --modversion gtkhtml | sed 's/^gtkhtml-//'`
		html="with GtkHTML $vers"
		FEATURES="$FEATURES GtkHTML"
		AC_DEFINE(USE_GTKHTML)
		AC_MSG_RESULT(yes)
		HTMLLIBS=`gnome-config --libs gtkhtml`
	else
		html="no"
		gtkhtml=no
		AC_MSG_RESULT(no)
	fi
else
	AC_MSG_RESULT(no)
fi

dnl #######################################################
dnl   GtkXmHtml
dnl #######################################################

AC_ARG_ENABLE([gtkxmhtml],
[  --disable-gtkxmhtml       Disable the use of the GtkXmHTML widget for showing messages [default=auto]],
[ gtkxmhtml=$enableval ], [ gtkxmhtml=yes ])

AC_MSG_CHECKING(for GtkXmHTML)
if test "$gtkxmhtml" = "yes"; then
	if test "$gtkhtml" = "no"; then
		AC_CHECK_HEADER([gtk-xmhtml/gtk-xmhtml.h], [
		html="with GtkXmHTML"
		FEATURES="$FEATURES GtkXmHTML"
		AC_DEFINE(USE_GTKXMHTML)
		HTMLLIBS=`gnome-config --libs gtkxmhtml`
		], [
		html="no"
		])
	else
		AC_MSG_RESULT(no)
	fi
fi

dnl #######################################################
dnl   Bonobo
dnl #######################################################

AC_ARG_ENABLE([bonobo],
[  --disable-bonobo          Disable the use of Bonobo [default=auto]],
[ bonobo=$enableval ], [ bonobo=yes ])

AC_MSG_CHECKING(for Bonobo)
if test "$bonobo" = "yes"; then
	if gnome-config --libs bonobox > /dev/null 2>&1; then
		vers=`gnome-config --modversion bonobo | sed -e "s/bonobo-//" | \
			awk 'BEGIN { FS = "."; } { printf "%d", $1 * 1000 + $2;}'`
		if test "$vers" -ge 32; then
			bonobo=true
		else
			bonobo=false
		fi
	else
		bonobo=false
	fi
	
	if $bonobo; then
		vers=`gnome-config --modversion bonobo | sed 's/^bonobo-//'`
		bonobo_ver="yes, with version $vers"
		AC_MSG_RESULT([found ("$vers")])
		AC_DEFINE(USE_BONOBO)
		FEATURES="$FEATURES Bonobo"
		BONOBOLIBS=`gnome-config --libs bonobo`
	else
		AC_MSG_RESULT(no)
	fi
fi

dnl Check if we can build the editor with GtkHTML support
AC_ARG_ENABLE([htmleditor],
[  --disable-htmleditor      Disable the editor with HTML support [default=auto]],
[ htmleditor=$enableval ], [ htmleditor=yes ])

AC_MSG_CHECKING([for editor type])
if test "$htmleditor" = "yes"; then
	if test $bonobo; then
		if test "$gtkhtml" = "yes"; then
			AC_DEFINE(USE_ADVANCED_EDITOR)
			AC_MSG_RESULT([advanced (extended support)])
			editor="Advanced, with HTML support"
		else
			AC_MSG_RESULT([basic])
			editor="Basic, without HTML support"
		fi
	else
		AC_MSG_RESULT([basic])
		editor="Basic, without HTML support"
	fi
else
	AC_MSG_RESULT([basic])
	editor="Basic, without HTML support"
fi

dnl #######################################################
dnl   Gnome Window Icon
dnl #######################################################

AC_CHECK_HEADERS(libgnomeui/gnome-window-icon.h, [ window_icon="yes" ])

if test "x$window_icon" = "xyes"; then
	AC_DEFINE(USE_GNOME_WINDOW_ICON)
fi

dnl #######################################################
dnl   Test Suite
dnl #######################################################

AC_ARG_ENABLE([test_suite],
[  --enable-test-suite       Enable the test suite. [default=no]],
[ test_suite=$enableval ], [ test_suite=no ])
AM_CONDITIONAL(USE_TEST_SUITE, test "x$test_suite" = "xyes")

dnl #######################################################
dnl   Tools
dnl #######################################################

AC_ARG_ENABLE([tools],
[  --enable-tools            Enable the tools. [default=no]],
[ tools=$enableval ], [ tools=no ])
AM_CONDITIONAL(USE_TOOLS, test "x$tools" = "xyes")

dnl #######################################################
dnl   UI Text Editor
dnl #######################################################

AC_ARG_ENABLE([ui_text_editor],
[  --enable-ui-text-editor   Enable UI Text Editor. (Developers only)],
[ ui_text_editor=$enableval ], [ ui_text_editor=no ])
AC_DEFINE(USE_UI_TEXT_EDITOR)
AM_CONDITIONAL(USE_UI_TEXT_EDITOR, test "x$ui_text_editor" = "xyes")

dnl #######################################################
dnl   Unix Socket
dnl #######################################################

AC_ARG_ENABLE([unix_socket],
[  --disable-unix-socket     Disable the creation of a Unix socket for
                            multisession support.],
[ unix_socket=$enableval ], [ unix_socket=yes ])
AC_DEFINE(USE_UNIX_SOCKET)
AM_CONDITIONAL(USE_UNIX_SOCKET, test "x$unix_socket" = "xyes")

dnl #######################################################
dnl   Message Cache
dnl #######################################################

AC_ARG_ENABLE([message_cache],
[  --enable-message-cache    Enable the cacheing in memory of opened messages
                            (recommended for machines with big memory capabilities)
                            (default=no)],
[ message_cache=$enableval ], [ message_cache=no ])

if test "$message_cache" = "yes"; then
	AC_DEFINE(USE_MESSAGE_CACHE)
	FEATURES="$FEATURES MessageCache"
fi

FEATURES="\"$FEATURES\""
AC_DEFINE_UNQUOTED(C2_PLUGIN_VERSION_MAJOR, $C2_PLUGIN_VERSION_MAJOR)
AC_DEFINE_UNQUOTED(C2_PLUGIN_VERSION_MINOR, $C2_PLUGIN_VERSION_MINOR)
AC_DEFINE_UNQUOTED(C2_PLUGIN_VERSION_MICRO, $C2_PLUGIN_VERSION_MICRO)
AC_DEFINE_UNQUOTED(FEATURES_URL, "http://cronosII.sf.net/remote_application_data/features.dat")
AC_SUBST(HTMLLIBS)
AC_SUBST(GCONFCFLAGS)
AC_SUBST(GCONFLIBS)
AC_SUBST(BONOBOLIBS)
AC_SUBST(LIBS)
if test "$debug" = "yes"; then
	CFLAGS="$CFLAGS -Wparentheses -Wpointer-arith -Wnested-externs -Wimplicit-function-declaration -Wreturn-type -Wuninitialized -Wunused"
fi
AC_SUBST(CFLAGS)
AC_SUBST(FEATURES)
AC_SUBST(LIBOBJS)
AC_SUBST(LIBGLADE_CFLAGS)
AC_SUBST(LIBGLADE_LIBS)
AC_SUBST(BUILDTIME)
URL="http://www.cronosII.org/"
HACKERS_LIST="cronosII-hackers@lists.sourceforge.net"
USERS_LIST="cronosII-users@lists.sourceforge.net"
AC_SUBST(URL)
AC_SUBST(HACKERS_LIST)
AC_SUBST(USERS_LIST)

AC_OUTPUT([
doc/Makefile
doc/C/Makefile
images/Makefile
intl/Makefile
libcronosII/Makefile
xml/Makefile
macros/Makefile
man/Makefile
utils/Makefile
test-suite/Makefile
tools/Makefile
pixmaps/Makefile
plugins/Makefile
po/Makefile.in
default/Makefile
default/cronosII.gnome
default/default.elm
default/default.index
src/Makefile
Makefile
about.html
bugs.html
features.html
message_404.html
touch.html
welcome.html
cronosII.spec
cronosII.desktop
cronosII-config
])

echo
echo  ============================= Result =============================
echo  Installing in prefix.............: $prefix
echo  Building test suite..............: $test_suite
echo  Building tools...................: $tools
echo  Building with debugging routines.: $debug
echo
echo  Building with HTML support.......: $html
echo  Building with GConf support......: $gconf
echo  Building with Bonobo support.....: $bonobo_ver
echo  Building with Editor type........: $editor
echo  Building with multi-session......: $unix_socket
echo  Building with message cache......: $message_cache
echo
echo  Run \'make\' to start compiling this software.
