pixmapdir = $(pkgdatadir)/pixmaps
pixmap_DATA = \
	advanced_misc.png	\
	blue_arrow.png		\
	drafts.png			\
	folder-closed.png	\
	folder-opened.png	\
	forward.png			\
	garbage.png			\
	general_accounts.png\
	general_options.png	\
	general_paths.png	\
	general_plugins.png	\
	green_arrow.png		\
	inbox.png			\
	interface_composer.png	\
	interface_fonts.png	\
	interface_html.png	\
	interface_misc.png	\
	loading-image.png	\
	mailbox.png			\
	mails.png			\
	mark.png			\
	mcard-edit.png		\
	mcard-edit_menu.png	\
	mcard.png			\
	mcard-menu.png		\
	no-image.png		\
	outbox.png			\
	queue_mbox.png		\
	read.png			\
	red_arrow.png		\
	splash.png			\
	reply.png			\
	unknown-file.png	\
	unread.png			\
	yellow_arrow.png

EXTRA_DIST = $(pixmap_DATA)
