pixmapdir = $(pkgdatadir)/pixmaps
pixmap_DATA = \
	advanced_misc.png	\
	attachments24.png	\
	attachments36.png	\
	blue_arrow.png		\
	check-off.png		\
	check-on.png		\
	close.png			\
	contacts.png		\
	copy-message.png	\
	delete.png			\
	drafts.png			\
	exit.png			\
	find.png			\
	folder-closed.png	\
	folder-opened.png	\
	forward.png			\
	garbage.png			\
	general_accounts.png\
	general_options.png	\
	general_paths.png	\
	general_plugins.png	\
	green_arrow.png		\
	inbox.png			\
	interface_composer.png	\
	interface_fonts.png	\
	interface_html.png	\
	interface_misc.png	\
	loading-image.png	\
	mailbox.png			\
	mail-write.png		\
	mails.png			\
	mark-forward.png	\
	mark-reply.png		\
	mark.png			\
	mcard-edit.png		\
	mcard-edit_menu.png	\
	mcard.png			\
	mcard-menu.png		\
	move-message.png	\
	next.png			\
	no-image.png		\
	prev.png			\
	print.png			\
	outbox.png			\
	queue_mbox.png		\
	read.png			\
	receive.png			\
	red_arrow.png		\
	save.png			\
	send.png			\
	send-receive.png	\
	splash.png			\
	reply-all.png		\
	reply.png			\
	unknown-file.png	\
	unread.png			\
	window.png			\
	yellow_arrow.png

emoticonsdir = $(pixmapdir)/emoticons
emoticons_DATA = \
	emoticon-smiley.png	\
	emoticon-sad.png	\
	emoticon-surprise.png	\
	emoticon-laugh.png	\
	emoticon-angry.png

EXTRA_DIST = $(pixmap_DATA) $(emoticons_DATA)
