pixmapdir = $(pkgdatadir)/pixmaps
pixmap_DATA = \
	advanced_misc.png	\
	attachments24.png	\
	attachments36.png	\
	check-off.png		\
	check-on.png		\
	close.png			\
	contacts.png		\
	copy-message.png	\
	delete.png			\
	drafts.png			\
	exit.png			\
	filter.png			\
	find.png			\
	folder-closed.png	\
	folder-opened.png	\
	forward.png			\
	garbage.png			\
	general_accounts.png\
	general_options.png	\
	general_paths.png	\
	general_plugins.png	\
	inbox.png			\
	interface_composer.png	\
	interface_fonts.png	\
	interface_html.png	\
	interface_misc.png	\
	loading-image.png	\
	mailbox.png			\
	mail-write.png		\
	mark-i-forwarded.png\
	mark-i-replied.png	\
	mark-i-readed.png	\
	mark-i-unreaded.png	\
	mark-forwarded.png	\
	mark-replied.png	\
	mark-readed.png		\
	mark-unreaded.png	\
	mark.png			\
	mcard-edit.png		\
	mcard-edit_menu.png	\
	mcard.png			\
	mcard-menu.png		\
	move-message.png	\
	next.png			\
	no-image.png		\
	prev.png			\
	print.png			\
	outbox.png			\
	queue_mbox.png		\
	receive.png			\
	save.png			\
	send.png			\
	send-receive.png	\
	send-receive16.png	\
	splash.png			\
	reply-all.png		\
	reply.png			\
	unknown-file.png	\
	window.png

emoticonsdir = $(pixmapdir)/emoticons
emoticons_DATA = \
	emoticon-smiley.png	\
	emoticon-sad.png	\
	emoticon-surprise.png	\
	emoticon-laugh.png	\
	emoticon-angry.png

EXTRA_DIST = $(pixmap_DATA) $(emoticons_DATA)
